test/Fail/TrustMe.err
TrustMe.agda:16.29-33: error: [UnequalTerms]
The terms
  sym (sym primTrustMe)
and
  primTrustMe
are not equal at type x ≡ y
when checking that the expression refl has type sym (sym eq) ≡ eq
